# boya

./: .gitignore  .gitmodules  Cargo.toml  README.md
crates/boya_core/: Cargo.toml
crates/boya_core/benches/: benchmark.rs
crates/boya_core/snapshots/: boya_core__bus__registers__dma__tests__dma.snap  boya_core__bus__registers__waitcnt__tests__waitstate.snap  boya_core__bus__tests__bios_cycle_count.snap  boya_core__cpu__arm__tests__armwrestler_suite-2.snap  boya_core__cpu__arm__tests__armwrestler_suite.snap  boya_core__cpu__arm__tests__gbatest_arm_suite.snap  boya_core__cpu__thumb__tests__gbatest_thumb_suite.snap  boya_core__cpu__thumb__tests__thumbwrestler_suite-2.snap  boya_core__cpu__thumb__tests__thumbwrestler_suite-3.snap  boya_core__cpu__thumb__tests__thumbwrestler_suite.snap
crates/boya_core/src/: lib.rs
crates/boya_core/src/apu/: mod.rs
crates/boya_core/src/arm7tdmi/: bank.rs  common.rs  isa.rs  mod.rs  ops.rs  pipeline.rs  psr.rs
crates/boya_core/src/bus/: cycles.rs  mod.rs  register.rs  types.rs
crates/boya_core/src/common/: types.rs
crates/boya_core/src/cpu/: common.rs  isa.rs  mod.rs  ops.rs  pipeline.rs  psr.rs  register.rs
crates/boya_core/src/debug/: display.rs  mod.rs  types.rs
crates/boya_core/src/gamepak/: mod.rs
crates/boya_core/src/ppu/: background.rs  character.rs  color.rs  mod.rs  object.rs  pixel.rs  window.rs
crates/boya_core/src/registers/: mod.rs
crates/boya_core/src/rom/: mod.rs
crates/boya_core/src/test/: asm.rs  bus.rs  mod.rs  snapshot.rs
crates/boya_core/src/utils/: bitflags.rs  collections.rs  mod.rs  ops.rs  register.rs  (+2 more)
crates/boya_wasm/: Cargo.toml
crates/boya_wasm/src/: io_map.rs  lib.rs  types.rs
(+281 files in other folders)
