[package]
name = "boya_core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion = "0.8.2"
insta = "1.46.3"

[features]
debug = ["serde"]

[lints.clippy]
missing_panics_doc = "deny"
upper_case_acronyms = "allow"

[[bench]]
name = "benchmark"
harness = false
