[package]
name = "boya_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
boya_core = { workspace = true }
serde-wasm-bindgen = "0.6.5"
tsify = "0.5.6"
wasm-bindgen = "0.2.106"
web-sys = "0.3.83"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
